--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,10 +12,16 @@ material:
   download:
     # 默认下载目录
     base-path: ./downloads
-    # 超时时间（毫秒）
+    # 超时时间（毫秒）- 已废弃，使用 connect-timeout 和 read-timeout
     timeout: 30000
+    # 连接超时时间（毫秒）
+    connect-timeout: 10000
+    # 读取超时时间（毫秒）
+    read-timeout: 60000
     # 最大重试次数
     max-retry: 3
+    # 请求间隔（毫秒），避免请求过快被限流
+    request-interval: 500
     # User-Agent
     user-agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/120.0.0.0 Safari/537.36
 
@@ -23,7 +29,7 @@ material:
 # logging:
 #   level:
 #     root: INFO
-#     com.tcxy.xygj: DEBUG
+#     com.prospect.giraffe: DEBUG
 
 # 水印去除配置
 watermark-removal:
