--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,14 +14,17 @@ material:
     base-path: ./downloads
     # 超时时间（毫秒）- 已废弃，使用 connect-timeout 和 read-timeout
     timeout: 30000
-    # 连接超时时间（毫秒）
+    # 连接超时时间（毫秒）- 建立连接的最大等待时间
     connect-timeout: 10000
-    # 读取超时时间（毫秒）
-    read-timeout: 60000
-    # 最大重试次数
-    max-retry: 3
+    # 读取超时时间（毫秒）- 数据传输的最大等待时间
+    # 注意：优化后会下载高清大图，单张图片可能 1-5MB，建议保持 60-120 秒
+    read-timeout: 90000
+    # 最大重试次数（失败后重试）
+    # 注意：下载高清图时可能因网络波动失败，建议设置 3-5 次
+    max-retry: 5
     # 请求间隔（毫秒），避免请求过快被限流
-    request-interval: 500
+    # 注意：下载高清图时建议适当增加间隔，推荐 500-1500ms
+    request-interval: 800
     # User-Agent
     user-agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/120.0.0.0 Safari/537.36
 
